URLの非推奨コンストラクタを排除。